mejora index martes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,25 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Blog de Naturaleza</title>
-  <link rel="stylesheet" href="styles/styles.css">
-  <link rel="shortcut icon" href="image/header.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/image/header.png" type="image/x-icon">
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/nosotros.css">
 </head>
 
 <body>
   <!-- <a href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/">fsdfxdfg</a> -->
 
   <!-- Header de la página -->
-  <header id="header">
-    <img src="image/mundonatural.png">
+  <!-- <header id="header">
+    <img src="/image/mundonatural.png">
     <h1><em>Mi Blog de Naturaleza</em></h1>
-    <p>
+    <p>-->
       <!-- <a href="">Botón</a> -->
-      Foto de <a
+      <!--Foto de <a
         href="https://unsplash.com/es/@r3dmax?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonatan
         Pie</a> en <a
         href="https://unsplash.com/es/fotos/dos-excursionistas-se-paran-en-una-cresta-montanosa-geotermica-9P_VNWgeOxo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </p>
-  </header>
+  </header> -->
 
   <!-- Barra de navegacion -->
   <nav>
@@ -35,238 +36,24 @@
       </svg>
     </label>
 
-    <a class="menu-desplegable" href="index.html"><img src="image/mundonatural.png" alt="logo de inicio"></a>
+    <a class="menu-desplegable" href="/index.html"><img src="/image/mundonatural.png" alt="logo de inicio"></a>
 
     <ul class="menu-desplegable">
       <!-- <li><a href="#lista-nosotros">Nosotros</a></li> -->
-      <li><a href="pages/nosotros.html">Nosotros</a></li>
+      <!-- <li><a href="pages/checked.html">Nosotros</a></li> -->
+      <li><a href="/index.html">Nosotros</a></li>
       <li><a href="pages/galeria.html">Servicios</a></li>
       <li><a href="pages/float.html">Contacto</a></li>
       <li><a href="pages/paneles.html">Paneles</a></li>
     </ul>
   </nav>
 
-
-
-
   <main>
 
-    <!-- Primer script que dice la edad si le das el año de nacimiento -->
-    <!-- <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
-   <p id="resultado"></p>
-   <button onclick="calcularEdad()">Calcula tu Edad</button> -->
-
-    <section id="lista-nosotros">
-      <article class="noticia">
-        <h2>Amantes de la naturaleza</h2>
-        <img class="noticia__img--right"
-          src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="">
-        <figcaption>Foto de <a
-            href="https://unsplash.com/es/@khouser01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keegan
-            Houser</a> en <a
-            href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        </figcaption>
-        <p>Un amante de la naturaleza es una persona que encuentra bienestar en la conexión con su entorno natural,
-          caracterizándose por su capacidad de asombro, su búsqueda de tranquilidad y la inspiración que encuentra en
-          los
-          elementos naturales como amaneceres o paisajes. Estas personas suelen ser reflexivas, flexibles, adaptables y
-          prudentes, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos,
-          la calma y la importancia del respeto por la vida.</p>
-      </article>
-
-       <article>
-        <h2>Rasgos y comportamientos</h2>
-        <div id="grid">
-
-          <div>
-            <h3>Conexión y asombro:</h3>
-            <p>Sienten una profunda conexión con la naturaleza y disfrutan de las experiencias al aire libre. Se
-              emocionan al
-              contemplar elementos como el amanecer o las estrellas.</p>
-          </div>
-
-          <div>
-            <h3>Búsqueda de bienestar:</h3>
-            <p>Consideran el contacto con la naturaleza como una fuente importante de salud física, mental y
-              emocional.</p>
-          </div>
-
-          <div>
-            <h3>Capacidad de reflexión:</h3>
-            <p>El tiempo a solas en la naturaleza les permite reflexionar y encontrar claridad, lo que a menudo
-              se traduce en
-              una toma de decisiones más pausada y consciente.</p>
-          </div>
-
-          <div>
-            <h3>Flexibilidad y adaptabilidad:</h3>
-            <p>Al estar expuestos a los cambios constantes del medio ambiente, desarrollan la habilidad de
-              adaptarse a
-              diferentes situaciones de forma flexible.</p>
-          </div>
-
-          <div>
-            <h3>Respeto y humildad:</h3>
-            <p>La naturaleza les enseña a respetar los ritmos y ciclos de la vida, lo que fomenta la
-              humildad y la tolerancia
-              hacia los demás.</p>
-          </div>
-
-          <div>
-            <h3>Inquietud:</h3>
-            <p>A menudo, son personas curiosas que buscan constantemente nuevos lugares y desafíos
-              para explorar.</p>
-          </div>
-
-          <div>
-            <h3>Prudencia:</h3>
-            <p>Desarrollan un sentido de cautela y previsión, aprendiendo a actuar con prudencia
-              para evitar daños
-          </div>
-
-        </div>
-      </article>
-      
-      <p>Sí, las personas que aman la naturaleza tienden a ser más felices debido a que el contacto con ella reduce el
-        estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
-      </p>
-
-      <div>
-        <h2>Beneficios para la felicidad</h2>
-        <h3>Reduce el estrés y la ansiedad:</h3>
-        <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental asociada a
-          la depresión y la ansiedad.</p>
-        <h3>Mejora el estado de ánimo:</h3>
-        <p>El contacto con el entorno natural puede aumentar la felicidad, fomentar la calma y mejorar el estado general
-          de ánimo.</p>
-        <h3>Aumenta la creatividad y la función cognitiva:</h3>
-        <p>El tiempo al aire libre puede estimular la creatividad, la atención y el desarrollo cognitivo.</p>
-        <h3>Beneficia la salud física:</h3>
-        <p>Respirar aire puro, fortalecer el sistema inmunológico y hacer actividad física en entornos naturales
-          contribuye a un mayor bienestar general.</p>
-        <h3>Fomenta la conexión:</h3>
-        <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
-          mayor empatía y conexión con los demás.</p>
-      </div>
-      <div>
-
-        <h2>Cómo conectar con la naturaleza</h2>
-
-
-        <h3>Actividades al aire libre:</h3>
-        <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
-        <h3>Observación:</h3>
-        <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy beneficioso.
-        </p>
-        <h3>En el día a día:</h3>
-        <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
-      </div>
-
-    </section>
-
-
-    <section id="lista-contacto">
-      <article class="noticia">
-        <h2>Jugando antes de la cena</h2>
-        <img class="noticia__img--left"
-          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
-          alt="">
-        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a></figcaption>
-        <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
-            caza</strong> y se
-          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
-          el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
-          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
-        </p>
-        <p>La escena captada por el fotógrafo Johnny Hayward coincide con la llamada “<a
-            href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
-            target="_blank">temporada del
-            oso polar</a>” , cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de
-          Hudson
-          donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
-            suficiente
-            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
-          respiro
-          sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
-          un descanso.
-        </p>
-
-      </article>
-    </section>
-    <!-- <div class="caja" id="caja-azul">
-      <p>
-        <strong>AZUL</strong>
-      </p>
-    </div> -->
-
-  </main>
-
-  <!-- Footer de la página -->
-  <footer>
-    <div>
-      <a href="#header">
-        <svg id="boton-arriba" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-          stroke="currentColor" class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
-        </svg>
-      </a>
-    </div>
-
-    <div id="contenedor-caja-footer">
-      <a class="contacto" href="tel:+34 600000000">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round"
-            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
-        </svg>Teléfono: +34 600000000</a>
-    </div>
-
-    <div>
-      <a class="contacto" href="micorreo@gmail.com">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"
-          className="size-6">
-          <path strokeLinecap="round" strokeLinejoin="round"
-            d="M21.75 9v.906a2.25 2.25 0 0 1-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 0 0 1.183 1.981l6.478 3.488m8.839 2.51-4.66-2.51m0 0-1.023-.55a2.25 2.25 0 0 0-2.134 0l-1.022.55m0 0-4.661 2.51m16.5 1.615a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V8.844a2.25 2.25 0 0 1 1.183-1.981l7.5-4.039a2.25 2.25 0 0 1 2.134 0l7.5 4.039a2.25 2.25 0 0 1 1.183 1.98V19.5Z" />
-        </svg>micorreo@gmail.com</a>
-    </div>
-    </div>
-
-    <div id="caja-mapa">
-      <p>Nuestra dirección en Madrid es </p>
-      <p><strong>General Palanca, 26</strong>, <strong>ubicación:</strong></p>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.432913091531!2d-3.699646759261554!3d40.399259456820985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42263168afe427%3A0x97f8b89dc1f1d175!2sGrupo%20Col%C3%B3n%20IECM-%20General%20Palanca%2026!5e0!3m2!1ses!2ses!4v1758702300400!5m2!1ses!2ses"
-        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <br><br>
-    </div>
-
-    <label for="tarea-nueva">Escribe tu <strong>correo</strong>:</label>
-    <input type="text" name="tarea-nueva" id="comentario" placeholder="correo@gmail">
-    <br><br>
-    <label for="tarea-nueva">Escribe tu <strong>comentario</strong>:</label>
-    <input type="text" name="tarea-nueva" id="comentario" placeholder="Texto">
-    
-    <button onclick="">Enviar</button>
-
-    <!-- <p>Escribe tu <strong>correo</strong>:</p>
-    <div class="boton" id="boton">
-    </div><br>
-
-    <p>Escribe tu <strong>comentario</strong>:</p>
-    <div class="comentario" id="comentario">
-    </div><br> -->
-
-    <div id="caja-copy">
-      <p><strong>Copyright 2025 - CMCM&copy;</strong></p>
-    </div>
-
-  </footer>
-  <!-- -->
-  <h1 style="text-align: center;">Botánica en la Península Ibérica</h1>
-
+  <h1>Botánica en la Península Ibérica</h1>
+<br><br>
   <h2>Índice:</h2>
+
   <ul>
     <li><a href="#lista1">Noticias</a></li>
     <li><a href="#lista2">Revistas</a></li>
@@ -424,11 +211,19 @@
     <figcaption>Buffff</figcaption><br>
   </div>
 
-  <hr><br>
+
   
-  <!-- <footer>
+  <footer>
+        <div>
+      <a href="#header">
+        <svg id="boton-arriba" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+        </svg>
+      </a>
+    </div>
     <p>Derechos reservados © 2024</p>
-  </footer> -->
+  </footer> 
 
   <!-- <script src="js/index.js"></script> -->
 
