--- a/pages/checked.html
+++ b/pages/checked.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejemplo :checked</title>
+  <title>Cómo conectar con la naturaleza</title>
   <!--<style>
     input[type="checkbox"]:checked + label {
       color: green;
@@ -17,9 +17,9 @@
   <label for="check1">Opción seleccionada</label>-->
 
 <ul id="tabs">
-     <li><a href="#tab1">Tab 1</a></li>
-     <li><a href="#tab2">Tab 2</a></li>
-     <li><a href="#tab3">Tab 3</a></li>
+     <li><a href="#tab1">Actividad 1</a></li>
+     <li><a href="#tab2">Actividad 2</a></li>
+     <li><a href="#tab3">Actividad 3</a></li>
 </ul>
 <div id="container">
    <div class="content">
@@ -27,18 +27,18 @@
     </div>
     <div class="content">
         <a name="tab1" id="tab1"></a>
-        <h2>Tab 1</h2>
-        <p>Lorem ipsum dolor sit amet consectetuer. Tempor amet esse elit anim minim velit veniam. Commodo. Id ut et est esse...</p>
+        <h2>Actividades al aire libre:</h2>
+        <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
     </div>
     <div class="content">
         <a name="tab2" id="tab2"></a>
-        <h2>Tab 2</h2>
-        <p>Ad voluptate ut nulla in ad laboris. Magna duis laboris. Culpa culpa et ad nostrud mollit dolore sint ex. Consequat ex.</p>
+        <h2>Observación:</h2>
+        <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy beneficioso.</p>
     </div>
       <div class="content">
         <a name="tab3" id="tab3"></a>
-        <h2>Tab 3</h2>
-        <p>Ad voluptate ut nulla in ad laboris. Magna duis laboris. Culpa culpa et ad nostrud mollit dolore sint ex. Consequat ex.</p>
+        <h2>En el día a día:</h2>
+        <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
     </div>
  </div>
 
