--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,26 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Blog de Naturaleza</title>
   <link rel="shortcut icon" href="/image/header.png" type="image/x-icon">
-  <link rel="stylesheet" href="/styles/styles.css">
   <link rel="stylesheet" href="/styles/nosotros.css">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
-  <!-- <a href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/">fsdfxdfg</a> -->
-
-  <!-- Header de la página -->
-  <!-- <header id="header">
-    <img src="/image/mundonatural.png">
-    <h1><em>Mi Blog de Naturaleza</em></h1>
-    <p>-->
-      <!-- <a href="">Botón</a> -->
-      <!--Foto de <a
-        href="https://unsplash.com/es/@r3dmax?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonatan
-        Pie</a> en <a
-        href="https://unsplash.com/es/fotos/dos-excursionistas-se-paran-en-una-cresta-montanosa-geotermica-9P_VNWgeOxo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-    </p>
-  </header> -->
-
+ <!-- <header></header> -->
   <!-- Barra de navegacion -->
   <nav>
     <input type="checkbox" name="menu" id="menu">
@@ -48,10 +34,10 @@
     </ul>
   </nav>
 
-  <main>
-
-  <h1>Botánica en la Península Ibérica</h1>
-<br><br>
+ 
+  <br><br><br>
+  <h1>Naturaleza en la Península Ibérica</h1>
+  <br><br>
   <h2>Índice:</h2>
 
   <ul>
@@ -61,14 +47,15 @@
     <li><a href="#lista-de-naturaleza">Naturaleza</a></li>
   </ul>
   <br>
+
   <div style="text-align: center;">
     <img src="https://www.naturaspain.com/images/Parques-naturales_2011.jpg" target="_blank" alt="foto de mapa"
       width="300px">
   </div>
-  <br>
+  <br><br>
   <hr>
-
-  <p id="lista1"><strong>Noticias</strong> del <em>medio ambiente</em>, usaremos las <strong>páginas </strong>:
+<section>
+  <p id="lista1"><strong>Noticias</strong> del <em>medio ambiente</em>, usaremos las <strong>siguientes</strong>:
     <!-- páginas de periódicos en lista -->
   <ul>
     <li><a href="https://www.elmundo.es" target="_blank">El Mundo,</a></li>
@@ -81,7 +68,7 @@
   <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRBpdBFikEdYTjK33m5xn0xhJNfq3XNfRbrlMJc9ZP6CWFOb3lXDd4jJifGwf2nZLxl95DmHWqnr6WzkDUUPJy8gIUpTnhk7LaZoIcDc3VBMw"
     target="_blank">imagen</a>.
   <br><br>
-  <p id="lista2"><strong>Revistas</strong> del <em>medio ambiente</em>, usaremos las <strong>páginas</strong>:
+  <p id="lista2"><strong>Revistas</strong> del <em>medio ambiente</em>, usaremos las <strong>siguientes</strong>:
     <!-- páginas de revistas en lista ordenada-->
   <ol>
     <li><a href="https://www.revistaquercus.es/" target="_blank">Revista Quercus,</a></li>
@@ -89,6 +76,8 @@
     <li>y <a href="https://www.wwf.es/informate/revista_wwf/" target="_blank"> WWF</a>.</li>
   </ol>
   <br>
+
+</section>
   <hr>
 
   <section>
@@ -116,52 +105,25 @@
   </section>
 
   <br><br>
-  <h2 id="lista-de-naturaleza"><strong> ¿Qué es la naturaleza?</strong></h2><br><br>
-  La naturaleza, en toda su diversidad y magnificencia, es un tesoro invaluable que sustenta la vida en nuestro
-  planeta. Desde los majestuosos picos de las montañas hasta los misteriosos abismos marinos, la naturaleza es una
-  obra maestra en constante evolución. En este artículo, exploraremos la definición de naturaleza, su importancia
+  <section>
+  <h2 id="lista-de-naturaleza"><strong>¿Qué es la naturaleza?</strong></h2><br><br>
+  <p>La naturaleza, en toda su diversidad y magnificencia, es un tesoro invaluable que sustenta la vida en nuestro
+  planeta.</p><p>Desde los majestuosos picos de las montañas hasta los misteriosos abismos marinos, la naturaleza es una
+  obra maestra en constante evolución.</p><p>En este artículo, exploraremos la definición de naturaleza, su importancia
   vital para la humanidad, la maravilla de su diversidad y belleza, así como la imperiosa necesidad de conservar y
-  proteger este invaluable legado.<br><br>
-  La naturaleza abarca todos los elementos que conforman nuestro mundo físico y biológico. Desde los paisajes más
+  proteger este invaluable legado.</p>
+  <p>La naturaleza abarca todos los elementos que conforman nuestro mundo físico y biológico. Desde los paisajes más
   imponentes hasta las formas de vida más diminutas, la naturaleza es la esencia misma de nuestro planeta.<br><br>
-  En esta introducción, exploraremos su diversidad, su impacto en nuestras vidas y la importancia de conservarla. La
-  naturaleza nos conecta con emociones, experiencias y la necesidad de preservarla para las futuras
-  generaciones.<br><br>
-
-  La naturaleza, en toda su diversidad y magnificencia, es un tesoro invaluable que sustenta la vida en nuestro
-  planeta. Desde los majestuosos picos de las montañas hasta los misteriosos abismos marinos, la naturaleza es una
-  obra maestra en constante evolución. En este artículo, exploraremos la definición de naturaleza, su importancia
-  vital para la humanidad, la maravilla de su diversidad y belleza, así como la imperiosa necesidad de conservar y
-  proteger este invaluable legado.<br><br>
-  La naturaleza abarca todos los elementos que conforman nuestro mundo físico y biológico. Desde los paisajes más
-  imponentes hasta las formas de vida más diminutas, la naturaleza es la esencia misma de nuestro planeta.<br><br>
-
-  En esta introducción, exploraremos su diversidad, su impacto en nuestras vidas y la importancia de conservarla. La
-  naturaleza nos conecta con emociones, experiencias y la necesidad de preservarla para las futuras generaciones.
-  <br><br>
-  La naturaleza, en toda su diversidad y magnificencia, es un tesoro invaluable que sustenta la vida en nuestro
-  planeta. Desde los majestuosos picos de las montañas hasta los misteriosos abismos marinos, la naturaleza es una
-  obra maestra en constante evolución. En este artículo, exploraremos la definición de naturaleza, su importancia
-  vital para la humanidad, la maravilla de su diversidad y belleza, así como la imperiosa necesidad de conservar y
-  proteger este invaluable legado.<br><br>
-  La naturaleza abarca todos los elementos que conforman nuestro mundo físico y biológico. Desde los paisajes más
-  imponentes hasta las formas de vida más diminutas, la naturaleza es la esencia misma de nuestro planeta.<br><br>
-
-  En esta introducción, exploraremos su diversidad, su impacto en nuestras vidas y la importancia de conservarla. La
-  naturaleza nos conecta con emociones, experiencias y la necesidad de preservarla para las futuras
-  generaciones.<br><br>
+  </p>
 
   <div class="caja-especial" id="texto-especial">
     <p>En esta introducción, exploraremos su diversidad, su impacto en nuestras vidas y la importancia de conservarla.
-      La
-      naturaleza nos conecta con emociones, experiencias y la necesidad de preservarla para las futuras
+      La naturaleza nos conecta con emociones, experiencias y la necesidad de preservarla para las futuras
       generaciones</p>
   </div>
-
-
-
-  <hr>
-  <div class="caja" id="caja-azul">
+  </section>
+<br><hr>
+  <!-- <div class="caja" id="caja-azul">
     <p>
       <strong>AZUL</strong>
     </p>
@@ -189,9 +151,9 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-  <hr>
+  <hr> -->
 
-  <div>
+  <!-- <div>
     <nav>
       <a href="#lista1">Noticias</a>
       <br>
@@ -202,21 +164,21 @@
       <a href="#lista-de-naturaleza">Naturaleza</a>
       <br><br><br>
     </nav>
-  </div>
+  </div> -->
 
-  <div style="text-align: center;">
+  <!-- <div style="text-align: center;">
     <img
       src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTyNudMZKVVyGRSH520mMVwKTB_arROrVrO24byb_mdbHVK2HPr7MICN4Z9xsrgAh4mfw-KrvfOu--wJG3K9vwSBswvv35WMDfqNgSiSA"
       alt="foto de gatito aburrido" height="200px">
     <figcaption>Buffff</figcaption><br>
-  </div>
+  </div> -->
 
 
   
   <footer>
         <div>
       <a href="#header">
-        <svg id="boton-arriba" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+        <svg id="boton-arriba2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
           stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
         </svg>
@@ -225,7 +187,7 @@
     <p>Derechos reservados © 2024</p>
   </footer> 
 
-  <!-- <script src="js/index.js"></script> -->
+
 
 
 </body>
