--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,17 +27,17 @@
     <ul class="menu-desplegable">
       <!-- <li><a href="#lista-nosotros">Nosotros</a></li> -->
       <!-- <li><a href="pages/checked.html">Nosotros</a></li> -->
-      <li><a href="/index.html">Nosotros</a></li>
-      <li><a href="pages/galeria.html">Servicios</a></li>
-      <li><a href="pages/float.html">Contacto</a></li>
-      <li><a href="pages/paneles.html">Paneles</a></li>
+      <li><a href="../index.html">Nosotros</a></li>
+      <li><a href="galeria.html">Servicios</a></li>
+      <li><a href="float.html">Contacto</a></li>
+      <li><a href="paneles.html">Paneles</a></li>
     </ul>
   </nav>
 
  
-  <br><br><br>
-  <h1>Naturaleza en la Península Ibérica</h1>
-  <br><br>
+
+  <h1 id="titulo-nosotros">Naturaleza en la Península Ibérica</h1>
+ 
   <h2>Índice:</h2>
 
   <ul>
@@ -177,7 +177,7 @@
   
   <footer>
         <div>
-      <a href="#header">
+      <a href="#titulo-nosotros">
         <svg id="boton-arriba2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
           stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
