mejora galera viernes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <ul class="menu-desplegable">
       <!-- <li><a href="#lista-nosotros">Nosotros</a></li> -->
-      <li><a href="pages/nosotros.html">Nosotros</a></li>
-      <li><a href="pages/galeria.html">Servicios</a></li>
+      <li><a href="pages/nosotros.html">Estudio</a></li>
+      <li><a href="pages/galeria.html">Paseos</a></li>
       <li><a href="pages/float.html">Contacto</a></li>
       <li><a href="pages/paneles.html">Paneles</a></li>
     </ul>
